--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,11 @@
-fastapi==0.105.0
+python-jose==3.3.0
+httpx==0.25.0
+fastapi==0.95.0
+uvicorn[standard]==0.21.1
+websockets==10.4
 python-multipart==0.0.6
-pillow==10.1.0
-tensorflow==2.15.0  # Changed from tensorflow-macos
-uvicorn==0.24.0
+torch==2.0.0
+torchvision==0.15.1
+pillow==9.5.0
+numpy==1.26.4
+
