--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -1,4 +1,6 @@
-streamlit==1.24.0
-Pillow==9.5.0
+boto3
+streamlit==1.22.0
+pillow==9.5.0
 websockets==10.4
-requests==2.31.0
+python-dotenv==1.0.0
+aiohttp
